--- a/src/components/account-login/login.module.css
+++ b/src/components/account-login/login.module.css
@@ -1,9 +1,10 @@
 .login {
   height: 100svh;
   max-height: 100svh;
-  background-color: #0c0c0c;
+  background-color: var(--bg-color);
   position: relative;
   z-index: 12;
+  overflow: hidden;
 }
 .login::before {
   content: "";
@@ -12,7 +13,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-color: #0c0c0c50;
+  background-color: #1e1e1e50;
   backdrop-filter: blur(100px);
   pointer-events: none;
 }
@@ -26,18 +27,28 @@
     rgba(246, 147, 60, 1) 0%,
     rgba(239, 111, 1, 1) 100%
   );
-  background: radial-gradient(
-    circle,
-    rgba(239, 111, 1, 1) 0%,
-    rgb(169, 115, 67) 100%
-  );
+  background: radial-gradient(circle, #ef6f01 0%, #a97343 100%);
   border-radius: 50%;
   top: 50%;
   left: 65%;
   transform: translate(-50%, -50%);
   z-index: -2;
   pointer-events: none;
-  scale: 1 1.1;
+  /* scale: 1 1.1; */
+  /* animation: rotate 20s infinite linear; */
+}
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+
+  50% {
+    scale: 1 1.5;
+  }
+
+  to {
+    rotate: 360deg;
+  }
 }
 .loginHolder {
   display: grid;
@@ -47,7 +58,7 @@
   padding: 25px;
 }
 .loginRight {
-  background: #ef6f01;
+  background: var(--style-color);
   border-radius: 16px;
   position: relative;
   z-index: 10;
@@ -57,7 +68,7 @@
   position: absolute;
   height: 12%;
   width: 25%;
-  background-color: #0c0c0c;
+  background-color: var(--bg-color);
   top: 0;
   right: 0;
   border-bottom-left-radius: 16px;
@@ -72,8 +83,10 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  box-shadow: inset 0px 1px #0c0c0c, inset 0px 14px 1px 1px #0c0c0c;
-  -moz-box-shadow: inset 0px 16px #0c0c0c, inset 0px 16px 1px 1px #0c0c0c;
+  box-shadow: inset 0px 1px var(--bg-color),
+    inset 0px 14px 1px 1px var(--bg-color);
+  -moz-box-shadow: inset 0px 16px var(--bg-color),
+    inset 0px 16px 1px 1px var(--bg-color);
   rotate: 50deg;
 }
 .logintopright::before {
@@ -85,15 +98,17 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  box-shadow: inset 0px 1px #0c0c0c, inset 0px 14px 1px 1px #0c0c0c;
-  -moz-box-shadow: inset 0px 16px #0c0c0c, inset 0px 16px 1px 1px #0c0c0c;
+  box-shadow: inset 0px 1px var(--bg-color),
+    inset 0px 14px 1px 1px var(--bg-color);
+  -moz-box-shadow: inset 0px 16px var(--bg-color),
+    inset 0px 16px 1px 1px var(--bg-color);
   rotate: 50deg;
 }
 .hiderLeft {
   position: absolute;
   top: 0;
   left: -64%;
-  background-color: #ef6f01;
+  background-color: var(--style-color);
   height: 100%;
   aspect-ratio: 1/1;
   border-top-right-radius: 16px;
@@ -105,7 +120,7 @@
   right: 0;
   height: 100%;
   aspect-ratio: 1/1;
-  background-color: #ef6f01;
+  background-color: var(--style-color);
   border-top-right-radius: 16px;
   z-index: 4;
 }
@@ -150,6 +165,20 @@
   width: 70%;
   display: flex;
   align-items: center;
+  /* background-color: red; */
+}
+.registerBtn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: fit-content;
+  text-decoration: underline;
+  transition: 300ms ease;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+.registerBtn:hover {
+  color: var(--style-color);
 }
 .inputWrapper {
   display: flex;
@@ -160,6 +189,7 @@
 .inputTitle {
   text-transform: capitalize;
   margin-bottom: 20px;
+  font-weight: 100;
 }
 .submitBtn,
 .inputHolder {
@@ -183,8 +213,8 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  padding-left: 40px;
-  background-color: #fdfdfd;
+  padding-left: 37px;
+  background-color: var(--text-color);
   font-size: 18px;
   font-weight: 500;
   opacity: 0.8;
@@ -211,22 +241,24 @@
   top: 50%;
   transform: translateY(-50%);
   left: 10px;
-  color: #0c0c0c;
+  color: var(--bg-color);
 }
 .submitBtn {
   margin-top: 10px;
   outline: 0;
   border: 0;
   border-radius: 4px;
-  background-color: #ef6f01;
-  color: #fdfdfd;
+  background-color: var(--style-color);
+  color: var(--text-color);
   font-weight: 600;
   font-size: 16px;
   text-transform: uppercase;
   cursor: pointer;
   position: relative;
+  width: 50%;
+  overflow: hidden;
 }
-.submitBtn:hover::after {
+.submitBtn:not(:disabled):hover::after {
   width: 100%;
 }
 .submitBtn::after {
@@ -236,5 +268,5 @@
   width: 0%;
   height: 100%;
   background-color: #fdfdfd40;
-  transition: 200ms ease;
+  transition: 300ms ease;
 }
