--- a/src/components/account-login/login.module.css
+++ b/src/components/account-login/login.module.css
@@ -6,6 +6,39 @@
   z-index: 12;
   overflow: hidden;
 }
+@keyframes grain {
+  0%,
+  100% {
+    transform: translate(0);
+  }
+  10% {
+    transform: translate(-5%, -10%);
+  }
+  20% {
+    transform: translate(-15%, 5%);
+  }
+  30% {
+    transform: translate(7%, -25%);
+  }
+  40% {
+    transform: translate(-5%, 25%);
+  }
+  50% {
+    transform: translate(-15%, 10%);
+  }
+  60% {
+    transform: translate(15%);
+  }
+  70% {
+    transform: translateY(15%);
+  }
+  80% {
+    transform: translate(3%, 35%);
+  }
+  90% {
+    transform: translate(-10%, 10%);
+  }
+}
 .login::before {
   content: "";
   position: absolute;
@@ -13,7 +46,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-color: #1e1e1e50;
+  background-color: #17171750;
   backdrop-filter: blur(100px);
   pointer-events: none;
 }
@@ -34,8 +67,24 @@
   transform: translate(-50%, -50%);
   z-index: -2;
   pointer-events: none;
-  /* scale: 1 1.1; */
-  /* animation: rotate 20s infinite linear; */
+  display: none;
+}
+.blob1 {
+  position: absolute;
+  z-index: -2;
+  pointer-events: none;
+  top: 5%;
+  left: 5%;
+  animation: rotate 40s infinite linear;
+}
+.blob2 {
+  position: absolute;
+  pointer-events: none;
+  z-index: -2;
+  bottom: -36%;
+  left: 60%;
+  transform: translateX(-50%);
+  animation: rotate 160s infinite linear;
 }
 @keyframes rotate {
   from {
@@ -162,10 +211,13 @@
   padding-top: calc(4% + 15px);
   position: relative;
   max-height: 100%;
-  width: 70%;
+  width: 100%;
   display: flex;
   align-items: center;
   /* background-color: red; */
+}
+.form {
+  width: 70%;
 }
 .registerBtn {
   position: absolute;
