--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -1,20 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
 }
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
+  font-family: "Montserrat", sans-serif;
+  font-family: "Epilogue", sans-serif;
 }
 ::selection {
-  background-color: var(--style-color);
-  color: #ffffff;
+  background-color: var(--text-color);
+  color: var(--main-color);
 }
 :root {
-  --bg-color: #1e1e1e;
-  --text-color: #f1e7dd;
-  --style-color: #ff602c;
+  --bg-color: #171717;
+  --main-color: #0d0d0d;
+  --text-color: #f9f9f9;
+  --style-color: #ff8e2a;
+  --padding: 15px;
+}
+.app_wrapper {
+  height: 100svh;
+  overflow: hidden;
+}
+.loggedin {
+  display: grid;
+  grid-template-columns: 1fr 3.5fr 1.5fr;
+  gap: 20px;
 }
