--- a/src/components/sidebar-left/sidebarLeft.module.css
+++ b/src/components/sidebar-left/sidebarLeft.module.css
@@ -30,10 +30,21 @@
   border-radius: 12px;
   text-transform: capitalize;
   background-color: transparent;
-  transition: 250ms ease-in-out;
+  transition: 300ms ease-in;
   font-size: 15px;
   font-weight: 700;
   cursor: pointer;
+  position: relative;
+}
+.chevron {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  transition: 300ms ease-in;
+}
+.chevron.active {
+  transform: translateY(-50%) rotate(180deg);
 }
 .link svg {
   font-size: 20px;
@@ -77,8 +88,8 @@
   font-size: 20px;
 }
 .dropDown li {
-  width: 80%;
-  margin-left: 20%;
+  width: 90%;
+  margin-left: 10%;
   padding-left: 10px;
   border-left: 1px solid rgba(255, 255, 255, 0.2);
 }
