--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -17,11 +17,23 @@ body {
 }
 :root {
   --bg-color: #1b1d21;
-  --main-color: #363636;
+  --main-color: #292c31;
   --text-color: #f9f9f9;
   --style-color: #f3821f;
   --error-color: #e4002b;
   --padding: 25px;
+}
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-track {
+  background: var(--bg-color);
+}
+::-webkit-scrollbar-thumb {
+  background: var(--main-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 .app_wrapper {
   height: 100svh;
