--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -48,10 +48,15 @@ body {
 .app_wrapper {
   height: 100svh;
   overflow: hidden;
+  max-height: 100svh;
+  background-color: var(--bg-color);
+  position: relative;
+  z-index: 12;
+  overflow: hidden;
 }
 .loggedin {
   display: grid;
-  grid-template-columns: 1.2fr 3.5fr 1.5fr;
+  grid-template-columns: 1.4fr 3.5fr 2fr;
 }
 ul {
   list-style: none;
@@ -64,7 +69,7 @@ a {
   background-color: var(--text-color);
   color: var(--bg-color);
   padding: 15px;
-  border-radius: 8px;
+  border-radius: 4px;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -79,4 +84,8 @@ a {
   color: var(--text-color);
   padding: 5px;
   border-radius: 4px;
+}
+.recharts-cartesian-axis line,
+.recharts-yAxis line {
+  opacity: 0;
 }
