--- a/src/components/sidebar-left/sidebarLeft.module.css
+++ b/src/components/sidebar-left/sidebarLeft.module.css
@@ -1,20 +1,20 @@
 .leftSideBar {
   padding: var(--padding);
   position: relative;
+  background-color: var(--bg-color);
 }
 .sideBarLogo {
   max-width: 100%;
   position: relative;
   width: 100%;
   height: 60px;
-  border-radius: 8px;
+  margin-bottom: var(--padding);
 }
 .sideBarLogo img {
   object-fit: contain;
-  filter: invert(1);
-  left: 15px !important;
-  height: 60% !important;
-  width: 60% !important;
+  left: calc(-50% + var(--padding) + 5px) !important;
+  height: 100% !important;
+  width: 100% !important;
 }
 .leftSideBar ul {
   display: flex;
@@ -35,6 +35,7 @@
   font-weight: 700;
   cursor: pointer;
   position: relative;
+  color: var(--text-color);
 }
 .chevron {
   position: absolute;
@@ -46,8 +47,12 @@
 .chevron.active {
   transform: translateY(-50%) rotate(180deg);
 }
+.smallSvg {
+  color: var(--style-color);
+}
 .link svg {
   font-size: 20px;
+  color: var(--style-color);
 }
 .link.active {
   background-color: var(--text-color);
@@ -101,6 +106,6 @@
 }
 .dropDown.active {
   padding: 10px 0;
-  height: 92.4px;
+  height: calc(92.4px + 35px);
   background-color: transparent;
 }
