--- a/src/components/sidebar-right/sidebarRight.module.css
+++ b/src/components/sidebar-right/sidebarRight.module.css
@@ -1,5 +1,6 @@
 .rightSideBar {
   padding: var(--padding);
+  background-color: var(--text-color);
 }
 .header {
   display: flex;
@@ -57,9 +58,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  color: var(--bg-color);
 }
 .historyBox:nth-child(odd) {
   background-color: var(--main-color);
+  color: var(--text-color);
 }
 .df {
   display: flex;
