--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -90,3 +90,50 @@ a {
   opacity: 0;
   stroke: var(--main-color);
 }
+
+.react-calendar {
+  background-color: var(--bg-color) !important;
+  color: var(--text-color);
+  border-color: transparent !important;
+  position: relative !important;
+}
+.react-calendar::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: -6px;
+  left: 6px;
+  z-index: -15;
+  background-color: var(--second-color);
+  opacity: 0.7;
+}
+.react-calendar__navigation {
+  border-color: transparent !important;
+}
+.react-calendar__navigation > * {
+  color: var(--text-color) !important;
+}
+.react-calendar button:hover,
+.react-calendar__navigation button:hover {
+  background-color: var(--main-color) !important;
+}
+.react-calendar button {
+  color: var(--text-color) !important;
+}
+.react-calendar__month-view__days__day--weekend {
+  color: var(--error-color) !important;
+}
+.react-calendar__tile--active:enabled:hover {
+  background-color: #faa459 !important;
+}
+.react-calendar__month-view__weekdays__weekday {
+  color: var(--style-color) !important;
+}
+.react-calendar__tile--now {
+  background-color: var(--bg-color) !important;
+  border: 1px solid var(--style-color) !important;
+}
+.react-calendar__tile--active {
+  background-color: var(--style-color) !important;
+}
