--- a/src/pages/projects/[name]/project.module.css
+++ b/src/pages/projects/[name]/project.module.css
@@ -1,3 +1,57 @@
 .project {
   padding: var(--padding);
 }
+.calendarsHolder {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.projectHolder {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: var(--padding);
+}
+.orangeBtn {
+  width: fit-content;
+  padding: 15px 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: var(--text-color);
+  color: var(--bg-color);
+  border: 1px solid var(--bg-color);
+  outline: 0;
+  cursor: pointer;
+  transition: 300ms ease-in;
+  position: relative;
+}
+.orangeBtn::after {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  left: 2.8px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+  border: 1px solid var(--bg-color);
+  z-index: -1;
+  transition: 300ms ease-in;
+}
+.orangeBtn:hover {
+  background-color: var(--main-color);
+  color: var(--text-color);
+}
+.orangeBtn:hover::after {
+  background-color: var(--text-color);
+}
+.title {
+  font-size: 3svw;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.title svg {
+  color: var(--style-color);
+}
