--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -68,12 +68,11 @@
   opacity: 1;
 }
 .dashboardHeader button {
-  background-color: transparent;
+  background-color: var(--text-color);
   height: 36px;
   aspect-ratio: 1/1;
-  border-radius: 12px;
   outline: 0;
-  border: 1px dashed var(--main-color);
+  border: 1px solid var(--main-color);
   color: var(--main-color);
   transition: 250ms ease-in;
   cursor: pointer;
@@ -82,7 +81,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0.7;
+  position: relative;
+}
+.dashboardHeader button::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: -4px;
+  left: 4px;
+  background-color: var(--second-color);
+  z-index: -1;
 }
 .dashboardHeader button:hover {
   opacity: 1;
