--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -106,7 +106,7 @@ a {
   left: 6px;
   z-index: -15;
   background-color: var(--second-color);
-  opacity: 0.7;
+  opacity: 0.9;
 }
 .react-calendar__navigation {
   border-color: transparent !important;
@@ -136,4 +136,7 @@ a {
 }
 .react-calendar__tile--active {
   background-color: var(--style-color) !important;
+}
+.react-calendar__month-view__days__day--neighboringMonth {
+  background-color: #090909 !important;
 }
