added project model

--- a/src/components/sidebar-right/sidebarRight.module.css
+++ b/src/components/sidebar-right/sidebarRight.module.css
@@ -1,6 +1,7 @@
 .rightSideBar {
   padding: var(--padding);
   background-color: var(--text-color);
+  height: calc(100svh - 85px);
 }
 .header {
   display: flex;
