--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -1,8 +1,8 @@
 .dashboard {
   padding: 0;
   position: relative;
-  height: 100svh;
-  max-height: 100svh;
+  height: calc(100svh - 85px);
+  max-height: calc(100svh - 85px);
   overflow-y: auto;
   padding-bottom: var(--padding);
   padding: var(--padding);
@@ -15,7 +15,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  /* background-color: var(--bg-color); */
+  background-color: var(--text-color);
   z-index: 99;
   padding: var(--padding) 0;
   height: 86px;
@@ -29,8 +29,8 @@
 .inputHolder::after {
   content: "";
   position: absolute;
-  bottom: -4px;
-  left: 4px;
+  bottom: -2px;
+  left: 2.4px;
   width: 100%;
   height: 100%;
   background-color: var(--second-color);
@@ -88,8 +88,8 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  bottom: -4px;
-  left: 4px;
+  bottom: -2.5px;
+  left: 2.4px;
   background-color: var(--second-color);
   z-index: -1;
 }
