--- a/src/components/sidebar-left/sidebarLeft.module.css
+++ b/src/components/sidebar-left/sidebarLeft.module.css
@@ -1,7 +1,9 @@
 .leftSideBar {
   padding: var(--padding);
   position: relative;
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
+  background-color: var(--soft-color);
+  height: calc(100svh - 76px);
 }
 .sideBarLogo {
   max-width: 100%;
@@ -35,7 +37,7 @@
   font-weight: 700;
   cursor: pointer;
   position: relative;
-  color: var(--text-color);
+  color: var(--second-color);
 }
 .chevron {
   position: absolute;
