--- a/src/pages/projects/[name]/project.module.css
+++ b/src/pages/projects/[name]/project.module.css
@@ -1,5 +1,8 @@
 .project {
   padding: var(--padding);
+  height: calc(100svh - 85px);
+  max-height: calc(100svh - 85px);
+  overflow-y: auto;
 }
 .calendarsHolder {
   display: flex;
@@ -9,7 +12,7 @@
 .projectHolder {
   height: 100%;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
   gap: var(--padding);
 }
@@ -29,8 +32,8 @@
 .orangeBtn::after {
   content: "";
   position: absolute;
-  bottom: -4px;
-  left: 2.8px;
+  bottom: -3.5px;
+  left: 2px;
   width: 100%;
   height: 100%;
   z-index: -1;
