replaced old API with another one

--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -30,7 +30,7 @@
   justify-content: center;
   accent-color: var(--style-color);
 }
-.tableTab:nth-child(even) {
+.tableTab:nth-child(odd) {
   background-color: var(--soft-color);
 }
 .tableTab span {
