--- a/src/pages/projects/[name]/project.module.css
+++ b/src/pages/projects/[name]/project.module.css
@@ -52,6 +52,10 @@
 }
 .calendar_tab small {
   cursor: pointer;
+  display: block;
+  width: 150px;
+  height: 100%;
+  background-color: transparent;
 }
 .calendar_tab svg {
   position: absolute;
@@ -154,4 +158,24 @@
 }
 .projectHolderList {
   height: 100%;
+}
+.projectHeader {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.projectFilter {
+  width: 40px;
+  aspect-ratio: 1/1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  outline: 0;
+  background-color: var(--soft-color);
+  font-size: 18px;
+  cursor: pointer;
+}
+.projectFilter:active {
+  scale: 0.99;
 }
