--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: 80px 0.6fr 1.5fr 1.2fr 1fr;
+  grid-template-columns: 80px 0.8fr 1.5fr 1.2fr 1fr;
 }
 .grid span {
   padding: 10px;
@@ -53,3 +53,38 @@
   background-color: #03a803;
   color: #fff;
 } */
+.underBtn {
+  width: 40px;
+  aspect-ratio: 1/1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--soft-color);
+  outline: 0;
+  border: 0;
+  object-fit: cover;
+  cursor: pointer;
+}
+.underHolder {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+.recycleBtn {
+  padding: 10px 15px;
+  border: 1px solid var(--bg-color);
+  background-color: var(--text-color);
+  color: var(--bg-color);
+  transition: 250ms ease-in-out;
+  cursor: pointer;
+}
+.recycleBtn:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+}
+.recycleBtn:not(:disabled):hover {
+  background-color: var(--main-color);
+  color: var(--text-color);
+}
