--- a/src/components/sidebar-left/sidebarLeft.module.css
+++ b/src/components/sidebar-left/sidebarLeft.module.css
@@ -23,7 +23,7 @@
   flex-direction: column;
   gap: 2px;
 }
-.dropDown a,
+.dropDown .underLink,
 .link {
   display: flex;
   align-items: center;
@@ -60,8 +60,8 @@
   background-color: var(--text-color);
   color: var(--bg-color);
 }
-.dropDown a.active,
-.dropDown a:hover,
+.dropDown .underLink.active,
+.dropDown .underLink:hover,
 .link:hover {
   background-color: var(--text-color);
   color: var(--bg-color);
