--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -88,3 +88,68 @@
   background-color: var(--main-color);
   color: var(--text-color);
 }
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+.pagi {
+  color: var(--text-color);
+  cursor: pointer;
+}
+.pagi.active {
+  background-color: var(--style-color);
+}
+.paginationBtns {
+  display: flex;
+  gap: 2px;
+}
+.paginationBtns button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  outline: 0;
+  background-color: var(--text-color);
+  color: var(--bg-color);
+  border: 1px solid var(--bg-color);
+  width: 30px;
+  aspect-ratio: 1/1;
+  font-weight: 600;
+  transition: 250ms ease-in-out;
+  cursor: pointer;
+}
+.paginationBtns button:hover {
+  background-color: var(--second-color);
+  color: var(--text-color);
+}
+.pageNumbers {
+  position: relative;
+  display: flex;
+  gap: 2px;
+}
+.pageNumbers button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  outline: 0;
+  background-color: var(--text-color);
+  color: var(--bg-color);
+  border: 1px solid var(--bg-color);
+  width: 30px;
+  aspect-ratio: 1/1;
+  font-weight: 600;
+  transition: 250ms ease-in-out;
+  cursor: pointer;
+}
+.pageNumbers ul {
+  position: absolute;
+  bottom: calc(100% + 5px);
+  left: 0;
+  width: 100%;
+  height: fit-content;
+  background-color: var(--bg-color);
+  z-index: 99;
+}
