--- a/src/components/main-project/mainproject.module.css
+++ b/src/components/main-project/mainproject.module.css
@@ -18,7 +18,7 @@
 }
 .filter {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: var(--padding);
 }
 .label {
