--- a/src/components/main-project/mainproject.module.css
+++ b/src/components/main-project/mainproject.module.css
@@ -3,6 +3,7 @@
   height: calc(100svh - 85px);
   max-height: calc(100svh - 85px);
   overflow-y: auto;
+  position: relative;
 }
 .calendarsHolder {
   display: flex;
