--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -205,3 +205,56 @@
   font-weight: 600;
   color: var(--second-color);
 }
+.popOut {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.popUp {
+  width: 35%;
+  height: fit-content;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  background-color: var(--text-color);
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  text-align: center;
+  padding: calc(var(--padding) * 1.8) var(--padding);
+}
+.popUp h3 {
+  text-transform: uppercase;
+}
+.popUp p {
+  line-height: 1.4;
+  color: rgba(0, 0, 0, 0.8);
+}
+.popUpBtns {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
+.popUpBtns button {
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 2px;
+  outline: 0;
+  border: 0;
+  background-color: var(--soft-color);
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.popUpBtns button.confirm {
+  background-color: var(--style-color);
+  color: var(--text-color);
+}
