--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: 80px 0.8fr 1.5fr 1.2fr 1fr;
+  grid-template-columns: 80px 0.8fr 0.8fr 1.5fr 1.5fr 1.2fr 1fr;
 }
 .grid span {
   padding: 10px;
