--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -1,10 +1,11 @@
 .grid {
   display: grid;
   grid-template-columns: 80px 0.8fr 0.8fr 1.5fr 1.5fr 1.2fr 1fr;
+  /* grid-template-columns: 80px 0.8fr 0.8fr 1.5fr 1.5fr 1.2fr 1fr 0.5fr; */
 }
 .grid span {
-  padding: 10px;
-  border-right: 1px solid var(--text-color);
+  padding: 12px 10px;
+  /* border-right: 1px solid var(--text-color); */
 }
 .grid span:last-child {
   border-right: 0;
@@ -12,6 +13,8 @@
 .tableHeader {
   background-color: var(--main-color);
   color: var(--text-color);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
   /* border: 1px solid #a7a7a7; */
 }
 .tableHeader span {
@@ -19,6 +22,22 @@
   align-items: center;
   justify-content: center;
   text-transform: capitalize;
+  padding: 14px 10px;
+}
+.searchBtn {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #a7a7a7;
+  color: #414141;
+  outline: 0;
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.searchBtn:active {
+  scale: 0.97;
 }
 .checkBox input {
   width: 18px;
@@ -204,8 +223,12 @@
   gap: 10px;
   /* background-color: #e6e6e6; */
 }
+.emptyTable img {
+  filter: grayscale(100%);
+}
 .emptyTable h3 {
   font-weight: 600;
+  line-height: 1.4;
   color: var(--second-color);
 }
 .popOut {
