--- a/src/components/account-login/login.module.css
+++ b/src/components/account-login/login.module.css
@@ -266,7 +266,7 @@
   height: 100%;
   z-index: -1;
   padding-left: 37px;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   font-size: 18px;
   font-weight: 500;
   opacity: 0.8;
@@ -301,7 +301,7 @@
   border: 0;
   border-radius: 4px;
   background-color: var(--style-color);
-  color: var(--text-color);
+  color: var(--txt-color);
   font-weight: 600;
   font-size: 16px;
   text-transform: uppercase;
