--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -7,7 +7,7 @@
   padding-bottom: var(--padding);
   padding: var(--padding);
   padding-top: 0;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
 }
 .dashboardHeader {
   display: flex;
@@ -15,7 +15,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   z-index: 99;
   padding: var(--padding) 0;
   height: 86px;
@@ -49,7 +49,7 @@
   width: 100%;
   height: 100%;
   /* border-radius: 12px; */
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   color: var(--bg-color);
   border: 1px solid var(--main-color);
   outline: 0;
@@ -68,7 +68,7 @@
   opacity: 1;
 }
 .dashboardHeader button {
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   height: 36px;
   aspect-ratio: 1/1;
   outline: 0;
@@ -179,7 +179,7 @@
   right: -18px;
   width: 30px;
   aspect-ratio: 1/1;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   transform: rotate(140deg);
   pointer-events: none;
 }
@@ -209,7 +209,7 @@
   padding: 8px 15px;
   border-radius: 8px;
   background-color: var(--main-color);
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   color: var(--bg-color);
   cursor: pointer;
   transition: 300ms ease-in-out;
@@ -219,5 +219,5 @@
 .chartTab ul li:hover,
 .chartTab ul li.active {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
