--- a/src/components/main-project/mainproject.module.css
+++ b/src/components/main-project/mainproject.module.css
@@ -30,7 +30,7 @@
   text-transform: uppercase;
 }
 .filter button {
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   color: var(--bg-color);
   outline: 0;
   border: 1px solid var(--bg-color);
@@ -42,7 +42,7 @@
 }
 .filter button:hover {
   background-color: var(--bg-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
 .filter_tab {
   display: flex;
@@ -54,7 +54,7 @@
   padding: 10px;
   border: 1px solid var(--bg-color);
   outline: 0;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   position: relative;
   overflow: visible;
   accent-color: var(--style-color);
@@ -90,7 +90,7 @@
   top: calc(100% + 5px);
   left: 0;
   border: 1px solid var(--bg-color);
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
 }
 .dropDown ul {
   display: flex;
@@ -122,7 +122,7 @@
   padding: 15px 30px;
   font-weight: 500;
   text-transform: uppercase;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   color: var(--bg-color);
   border: 1px solid var(--bg-color);
   outline: 0;
@@ -156,7 +156,7 @@
 }
 .orangeBtn:not(:disabled):hover {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
 .orangeBtn:not(:disabled):hover::after {
   background-color: var(--soft-color);
