--- a/src/components/pfoject-table/projecttable.module.css
+++ b/src/components/pfoject-table/projecttable.module.css
@@ -5,14 +5,14 @@
 }
 .grid span {
   padding: 12px 10px;
-  /* border-right: 1px solid var(--text-color); */
+  /* border-right: 1px solid var(--txt-color); */
 }
 .grid span:last-child {
   border-right: 0;
 }
 .tableHeader {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: var(--txt-color);
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   /* border: 1px solid #a7a7a7; */
@@ -103,7 +103,7 @@
 .recycleBtn {
   padding: 10px 15px;
   border: 1px solid var(--bg-color);
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   color: var(--bg-color);
   transition: 250ms ease-in-out;
   cursor: pointer;
@@ -114,7 +114,7 @@
 }
 .recycleBtn:not(:disabled):hover {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
 .pagination {
   display: flex;
@@ -123,7 +123,7 @@
   margin: 10px 0;
 }
 .pagi {
-  color: var(--text-color);
+  color: var(--txt-color);
   cursor: pointer;
 }
 .paginationBtns {
@@ -151,7 +151,7 @@
 .paginationBtns button.active,
 .paginationBtns button:hover {
   background-color: var(--second-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
 .dropDownPagination {
   display: flex;
@@ -162,7 +162,7 @@
   position: absolute;
   bottom: calc(100% + 10px);
   width: 100%;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding: 5px;
@@ -192,7 +192,7 @@
 .paginationBtns span:hover,
 .paginationBtns span.active {
   background-color: var(--second-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
 .paginationBtns span svg {
   transition: 150ms ease-in-out;
@@ -246,7 +246,7 @@
   width: 35%;
   height: fit-content;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   border-radius: 6px;
   display: flex;
   align-items: center;
@@ -282,5 +282,5 @@
 }
 .popUpBtns button.confirm {
   background-color: var(--style-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
