--- a/src/components/sidebar-right/sidebarRight.module.css
+++ b/src/components/sidebar-right/sidebarRight.module.css
@@ -1,6 +1,6 @@
 .rightSideBar {
   padding: var(--padding);
-  background-color: var(--text-color);
+  background-color: var(--txt-color);
   height: calc(100svh - 85px);
 }
 .header {
@@ -62,7 +62,7 @@
 }
 .historyBox:nth-child(odd) {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: var(--txt-color);
 }
 .df {
   display: flex;
@@ -79,7 +79,7 @@
   aspect-ratio: 1/1;
   border-radius: 12px;
   background-color: var(--second-color);
-  color: var(--text-color);
+  color: var(--txt-color);
   display: flex;
   align-items: center;
   justify-content: center;
