--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -197,3 +197,9 @@ a {
   background-color: #000;
   color: white;
 }
+.p-dropdown-item {
+  padding: 10px;
+}
+.p-calendar .p-inputtext {
+  padding: 10px 15px !important;
+}
