--- a/src/components/main-project/mainproject.module.css
+++ b/src/components/main-project/mainproject.module.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
 }
 .projectHolder {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   /* justify-content: center; */
   flex-direction: column;
@@ -28,6 +28,7 @@
   width: fit-content;
   font-weight: 500;
   text-transform: uppercase;
+  color: #374151;
 }
 .filter button {
   background-color: var(--txt-color);
