--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -22,7 +22,7 @@ body {
   --bg-color: #000;
   --main-color: #161616;
   --second-color: #333;
-  --soft-color: #e5e7eb;
+  --soft-color: #ececec;
   --txt-color: #fff;
   --style-color: #ff7900;
   --error-color: #e4002b;
