--- a/src/components/main-project/mainproject.module.css
+++ b/src/components/main-project/mainproject.module.css
@@ -190,7 +190,9 @@
   justify-content: center;
   border: 0;
   outline: 0;
+  border-radius: 4px;
   background-color: var(--soft-color);
+  border: 1px solid #68686960;
   font-size: 18px;
   cursor: pointer;
 }
