--- a/src/pages/history/history.module.css
+++ b/src/pages/history/history.module.css
@@ -31,7 +31,9 @@
   justify-content: center;
   border: 0;
   outline: 0;
+  border-radius: 4px;
   background-color: var(--soft-color);
+  border: 1px solid #68686960;
   font-size: 18px;
   cursor: pointer;
 }
@@ -184,4 +186,10 @@
 }
 .projectHolderList {
   height: 100%;
+}
+.tableFunctions {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
 }
