--- a/src/components/sidebar-left/sidebarLeft.module.css
+++ b/src/components/sidebar-left/sidebarLeft.module.css
@@ -4,7 +4,7 @@
   background-color: var(--soft-color);
   height: calc(100svh - 85px);
   margin-right: 0;
-  border-right: 1px solid #aeafb060;
+  /* border-right: 1px solid #aeafb060; */
 }
 .sideBarLogo {
   max-width: 100%;
